syntax = "proto3";

option csharp_namespace = "Tag.Contracts";

package tags;

import "google/protobuf/empty.proto";

service TagService {
  rpc GetManyByProjectId(GetManyTagsByProjectIdRequest) returns (GetManyTagsByProjectIdResponse);
  rpc GetManyByIds(GetManyTagsByIdsRequest) returns (GetManyTagsByIdsResponse);
  rpc GetById(GetTagByIdRequest) returns (TagDto);
  rpc Create(CreateTagRequest) returns (TagDto);
  rpc Update(UpdateTagRequest) returns (TagDto);
  rpc Delete(DeleteTagRequest) returns (google.protobuf.Empty);
}

message TagDto {
  string id = 1;
  optional string project_id = 2;
  string tenant_id = 3;
  string name = 4;
  string color = 5;
}

message GetManyTagsByProjectIdRequest {
  string tenant_id = 1;
  string project_id = 2;
}

message GetManyTagsByProjectIdResponse {
  repeated TagDto tags = 1;
}

message GetManyTagsByIdsRequest {
  string tenant_id = 1;
  optional string project_id = 2;
  repeated string tag_ids = 3;
}

message GetManyTagsByIdsResponse {
  repeated TagDto tags = 1;
}

message GetTagByIdRequest {
  string tenant_id = 1;
  string project_id = 2;
  string tag_id = 3;
}

message CreateTagRequest {
  string tenant_id = 1;
  optional string project_id = 2;
  string name = 3;
  string color = 4;
}

message UpdateTagRequest {
  string tenant_id = 1;
  string project_id = 2;
  string tag_id = 3;
  string name = 4;
  string color = 5;
}

message DeleteTagRequest {
  string tenant_id = 1;
  string project_id = 2;
  string tag_id = 3;
}
